# noether

noether_conversions/: CMakeLists.txt  package.xml
noether_conversions/include/noether_conversions/: noether_conversions.h
noether_conversions/src/: noether_conversions.cpp
noether_examples/launch/: surface_walk_rastering_generator_demo.launch
noether_examples/src/: halfedge_edge_generator_node.cpp  surface_walk_raster_generator_node.cpp
noether_msgs/: CMakeLists.txt  package.xml
noether_tpp/: CMakeLists.txt  package.xml
noether_tpp/include/noether_tpp/: noether_tpp.h
noether_tpp/src/core/: tool_path_planner_pipeline.cpp
noether_tpp/src/tool_path_modifiers/: organization_modifiers.cpp
noether_tpp/src/tool_path_planners/: plane_slicer_raster_planner.cpp  raster_planner.cpp
noether_tpp/src/tool_path_planners/raster/: plane_slicer_raster_planner.cpp
tool_path_planner/src/: halfedge_boundary_finder.cpp  plane_slicer_raster_generator.cpp
vtk_viewer/src/: vtk_utils.cpp
