<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>noether_conversions</name>
  <version>0.0.0</version>
  <description>The noether_conversions package</description>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>cmake_modules</build_depend> -->

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>noether_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libvtk9-dev</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
