<?xml version="1.0"?>
<package format="3">
  <name>noether_msgs</name>
  <version>0.0.0</version>
  <description>The noether_msgs package</description>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <author email="jorge.nicho@swri.org">Jorge Nicho</author>
  <license>Apache 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>message_generation</exec_depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>